[gd_scene load_steps=8 format=2]

[ext_resource path="res://player/capsule.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://player/shield.png" type="Texture" id=3]
[ext_resource path="res://player/exhaust_particle.png" type="Texture" id=4]
[ext_resource path="res://audio/slow.wav" type="AudioStream" id=5]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.708075, 1 )
colors = PoolColorArray( 0.658824, 0.168627, 0.713726, 1, 0.411765, 0.12549, 0.792157, 1, 0.0392157, 0.172549, 0.494118, 0 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0

[node name="Player" type="Area2D"]
position = Vector2( 288, 150 )
collision_layer = 2
script = ExtResource( 2 )

[node name="LeftTurnThruster" type="CPUParticles2D" parent="."]
visible = false
position = Vector2( -10.6634, 28.9034 )
emitting = false
amount = 20
local_coords = false
direction = Vector2( 0, 1 )
spread = 10.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0

[node name="RightTurnThruster" type="CPUParticles2D" parent="."]
visible = false
position = Vector2( 11.2246, 28.9034 )
emitting = false
amount = 20
local_coords = false
direction = Vector2( 0, 1 )
spread = 10.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0

[node name="LeftSlowThruster" type="CPUParticles2D" parent="."]
position = Vector2( -10.6634, 28.9034 )
emitting = false
amount = 20
lifetime = 0.5
local_coords = false
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector2( 0, 1 )
spread = 10.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
angular_velocity = 232.26
angular_velocity_random = 1.0
angle = 720.0
angle_random = 1.0
scale_amount = 0.75
color_ramp = SubResource( 2 )

[node name="RightSlowThruster" type="CPUParticles2D" parent="."]
position = Vector2( 11.2246, 28.9034 )
emitting = false
amount = 20
lifetime = 0.5
local_coords = false
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector2( 0, 1 )
spread = 10.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
angular_velocity = 247.74
angular_velocity_random = 1.0
angle = 720.0
angle_random = 1.0
scale_amount = 0.75
color_ramp = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Shield" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.313726 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AudioSlow" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
